--- a/src/app/sidebar-header/sidebar-header.component.html
+++ b/src/app/sidebar-header/sidebar-header.component.html
@@ -8,58 +8,61 @@
             <nav>
                 <ul class="navigation-menu-list">
                     <li>
-                        <a href="#">
+                        <a href="#" style="font-weight: bold;">
                             <i class="fas fa-home"></i>
-                            <span>Home</span>
+                            <span class="hide-small-screens">Home</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <i class="fas fa-hashtag"></i>
-                            <span>Explore</span>
+                            <span class="hide-small-screens">Explore</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <i class="far fa-bell"></i>
-                            <span>Notifications</span>
+                            <span class="hide-small-screens">Notifications</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <i class="far fa-envelope"></i>
-                            <span>Messages</span>
+                            <span class="hide-small-screens">Messages</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <i class="far fa-bookmark"></i>
-                            <span>Bookmarks</span>
+                            <span class="hide-small-screens">Bookmarks</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <i class="far fa-list-alt"></i>
-                            <span>Lists</span>
+                            <span class="hide-small-screens">Lists</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <i class="far fa-user"></i>
-                            <span>Profile</span>
+                            <span class="hide-small-screens">Profile</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <i class="fas fa-ellipsis-h"></i>
-                            <span>More</span>
+                            <span class="hide-small-screens">More</span>
                         </a>
                     </li>
                 </ul>
             </nav>
 
             <div class="tweet-button-container">
-                <a href="#">Tweet</a>
+                <a class="hide-small-screens" href="#">Tweet</a>
+                <a class="hide-large-screen" href="#">
+                    <i class="fas fa-pen-fancy"></i>
+                </a>
             </div>
         </div>
     </div>
@@ -67,12 +70,12 @@
     <div class="user-profile-container">
         <img class="user-avatar" src="./../../assets/bannon-morrissy-RxiAV5LC-ww-unsplash.jpg" alt="">
 
-        <div class="user-info">
+        <div class="user-info hide-small-screens">
             <p class="display-name">UserXYZ</p>
             <p class="user-name">@UserXYZ</p>
         </div>
 
-        <div class="more">
+        <div class="more hide-small-screens">
             <i class="fas fa-ellipsis-h"></i>
         </div>
     </div>
