--- a/src/app/sidebar-header/sidebar-header.component.scss
+++ b/src/app/sidebar-header/sidebar-header.component.scss
@@ -1,3 +1,9 @@
+:host {
+    display: flex;
+    justify-content: end;
+    flex: 1;
+}
+
 .container {
     position: fixed;
     height: 100vh;
@@ -6,6 +12,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-y: scroll;
+    overflow-x: hidden;
 
     .logo-container i {
         font-size: 28px;
@@ -17,7 +25,7 @@
             font-size: 20px;
 
             li {
-                margin: 26px 0;
+                margin: 27px 0;
 
                 i {
                     height: 10px;
@@ -57,6 +65,7 @@
         display: flex;
         align-items: center;
         margin-bottom: 23px;
+        margin-top: 20px;
         font-size: 15px;
 
         .user-avatar {
@@ -82,5 +91,76 @@
         .more {
             margin-left: auto;
         }
+    }
+}
+
+@media (min-width: 1291px) {
+    .hide-large-screen {
+        display: none !important;
+    }
+}
+
+@media (max-width: 1290px) {
+    :host {
+        flex: 0.5;
+    }
+
+    header {
+        width: 100px !important;
+
+        .tweet-button-container {
+            width: 50px !important;
+            height: 50px !important;
+            border-radius: 50% !important;
+            margin-left: 2px !important;
+
+            display: flex;
+            justify-items: center;
+            align-items: center;
+
+            i {
+                font-size: 20px;
+                color: white !important;
+            }
+        }
+
+        .user-profile-container {
+            display: block !important;
+            margin-left: -7px;
+        }
+    }
+
+    .hide-small-screens {
+        display: none !important;
+    }
+}
+
+@media (max-width: 1048px) {
+    :host {
+        flex: 0.55;
+    }
+}
+
+@media (max-width: 960px) {
+    :host {
+        flex: 0.6;
+    }
+}
+
+@media (max-width: 820px) {
+    :host {
+        flex: 0.68;
+    }
+}
+
+@media (max-width: 750px) {
+    :host {
+        min-width: 100px;
+    }
+}
+
+@media (max-width: 500px) {
+    :host {
+        display: none;
     }
 }
