--- a/src/app/sidebar-others/sidebar-others.component.scss
+++ b/src/app/sidebar-others/sidebar-others.component.scss
@@ -3,8 +3,14 @@
     justify-content: space-between;
 }
 
+:host {
+    flex: 1.3;
+}
+
 aside {
-    width: 408px;
+    width: auto;
+    min-width: 345px;
+    max-width: 408px;
     min-height: 100vh;
     padding: 5px 25px 100px 35px;
 
@@ -134,4 +140,16 @@ aside {
             }
         }
     }
+}
+
+@media (max-width: 1048px) {
+    :host {
+        display: none;
+    }
+}
+
+@media (max-width: 1242px) {
+    :host {
+        flex: 1.7;
+    }   
 }
